syntax = "proto3";

package gostarter.api.auth;

import "buf/validate/validate.proto";

message LoginRequest { 
    string email = 1 [(buf.validate.field).string.min_len = 5];
    string password = 2 [(buf.validate.field).string.min_len = 5];
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 access_expires_in = 3; // in seconds
    int64 refresh_expires_in = 4; // in seconds
}

message RegisterRequest { 
    string email = 1 [(buf.validate.field).string.min_len = 5];
    string password = 2 [(buf.validate.field).string.min_len = 5];
}

message RegisterResponse {
    string email = 1;
}

message RefreshTokenRequest { 
    string refresh_token = 1 [(buf.validate.field).string.min_len = 5];
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 access_expires_in = 3; // in seconds
    int64 refresh_expires_in = 4; // in seconds
}

message ForgotPasswordRequest { 
    string email = 1 [(buf.validate.field).string.min_len = 5];
}

message ForgotPasswordResponse {
    string email = 1;
    string message = 2;
}

message ResetPasswordRequest { 
    string token = 1 [(buf.validate.field).string.min_len = 5];
    string password = 2 [(buf.validate.field).string.min_len = 5];
}

message ResetPasswordResponse {
    string message = 1;
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
    rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}
